--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,12 @@ jinja2==3.1.2
 aiofiles==23.1.0
 prometheus-client==0.16.0
 redis==4.5.4
-torch==2.0.0
+torch==2.6.0
 transformers==4.27.4
 numpy==1.24.2
 pyyaml==6.0
+seaborn==0.13.2
+matplotlib==3.7.2
+scikit-learn==1.3.2
+scipy==1.11.3
+pandas==2.1.3
