--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,13 @@ jinja2==3.1.2
 aiofiles==23.1.0
 prometheus-client==0.16.0
 redis==4.5.4
---find-links https://download.pytorch.org/whl/torch_stable.html
-torch==2.6.0
-transformers==4.38.0
-numpy==1.26.3
-pyyaml==6.0
-seaborn==0.13.2
-matplotlib==3.8.2
+numpy==1.24.2
+PyYAML==6.0.1
+transformers==4.27.4
+torch==2.0.1+cpu
+-f https://download.pytorch.org/whl/torch_stable.html
+seaborn==0.12.2
+matplotlib==3.7.1
 scikit-learn==1.4.0
 scipy==1.12.0
 pandas==2.2.0
