--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+setuptools>=69.0.2
+wheel>=0.42.0
 fastapi==0.95.0
 uvicorn==0.21.1
 pydantic==1.10.7
@@ -6,13 +8,13 @@ jinja2==3.1.2
 aiofiles==23.1.0
 prometheus-client==0.16.0
 redis==4.5.4
-numpy==1.24.2
+numpy==1.24.3
 PyYAML==6.0.1
 transformers==4.27.4
-torch==2.0.1+cpu
--f https://download.pytorch.org/whl/torch_stable.html
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==2.1.0+cpu
 seaborn==0.12.2
 matplotlib==3.7.1
-scikit-learn==1.4.0
-scipy==1.12.0
-pandas==2.2.0
+scikit-learn==1.3.0
+scipy==1.11.3
+pandas==2.0.3
