--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,7 @@
 [build-system]
 requires = [
     "setuptools>=69.0.2",
-    "wheel>=0.42.0",
-    "pip>=23.3.1",
-    "distutils-extra>=2.39"
+    "wheel>=0.42.0"
 ]
 build-backend = "setuptools.build_meta"
 
