--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-setuptools>=69.0.2
-wheel>=0.42.0
-distutils-extra>=2.39
-pip>=23.3.1
+--no-binary :all:
 fastapi==0.95.0
 uvicorn==0.21.1
 pydantic==1.10.7
@@ -10,11 +7,13 @@ jinja2==3.1.2
 aiofiles==23.1.0
 prometheus-client==0.16.0
 redis==4.5.4
-numpy==1.24.3
-PyYAML==6.0.1
-transformers==4.27.4
---find-links https://download.pytorch.org/whl/torch_stable.html
-torch==2.1.0+cpu
+numpy>=1.24.3
+PyYAML>=6.0.1
+transformers>=4.27.4
+--find-links https://download.pytorch.org/whl/cpu/torch_stable.html
+torch==2.0.0+cpu
+torchvision==0.15.1+cpu
+torchaudio==2.0.1
 seaborn==0.12.2
 matplotlib==3.7.1
 scikit-learn==1.3.0
