--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ jinja2==3.1.2
 aiofiles==23.1.0
 prometheus-client==0.16.0
 redis==4.5.4
-numpy>=1.24.3
-PyYAML>=6.0.1
-transformers>=4.27.4
+numpy==1.24.3
+PyYAML==6.0.1
+transformers==4.27.4
 --find-links https://download.pytorch.org/whl/cpu/torch_stable.html
 torch==2.0.0+cpu
 torchvision==0.15.1+cpu
