--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,29 @@
+[build-system]
+requires = [
+    "setuptools>=65.5.1",
+    "wheel>=0.38.4",
+    "pip>=23.0.1"
+]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "business_consultant"
 version = "0.1.0"
 description = "AI Business Consultant"
-requires-python = ">=3.11" 
+requires-python = ">=3.9"
+dependencies = [
+    "fastapi==0.95.0",
+    "uvicorn==0.21.1",
+    "pydantic==1.10.7",
+    "python-multipart==0.0.6",
+    "jinja2==3.1.2",
+    "aiofiles==23.1.0",
+    "prometheus-client==0.16.0",
+    "redis==4.5.4",
+    "numpy==1.24.3",
+    "PyYAML==6.0.1",
+    "transformers==4.27.4",
+    "scikit-learn==1.0.2",
+    "scipy==1.7.3",
+    "pandas==1.5.3"
+] 
