--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 --no-binary :all:
+setuptools>=65.5.1
+wheel>=0.38.4
 fastapi==0.95.0
 uvicorn==0.21.1
 pydantic==1.10.7
@@ -7,15 +9,11 @@ jinja2==3.1.2
 aiofiles==23.1.0
 prometheus-client==0.16.0
 redis==4.5.4
-numpy==1.24.3
-PyYAML==6.0.1
-transformers==4.27.4
 --find-links https://download.pytorch.org/whl/cpu/torch_stable.html
 torch==2.0.0+cpu
-torchvision==0.15.1+cpu
-torchaudio==2.0.1
-seaborn==0.12.2
-matplotlib==3.7.1
-scikit-learn==1.3.0
-scipy==1.11.3
-pandas==2.0.3
+transformers==4.27.4
+numpy==1.24.3
+PyYAML==6.0.1
+scikit-learn==1.0.2
+scipy==1.7.3
+pandas==1.5.3
