--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,5 +25,7 @@ dependencies = [
     "transformers==4.27.4",
     "scikit-learn==1.0.2",
     "scipy==1.7.3",
-    "pandas==1.5.3"
+    "pandas==1.5.3",
+    "matplotlib==3.7.1",
+    "seaborn==0.12.2"
 ] 
