--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,13 @@ prometheus-client==0.16.0
 redis==4.5.4
 --find-links https://download.pytorch.org/whl/cpu/torch_stable.html
 torch==2.0.0+cpu
+torchvision==0.15.1+cpu
+torchaudio==2.0.1
 transformers==4.27.4
 numpy==1.24.3
 PyYAML==6.0.1
 scikit-learn==1.0.2
 scipy==1.7.3
 pandas==1.5.3
+matplotlib==3.7.1
+seaborn==0.12.2
