--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,8 @@
 requires = [
     "setuptools>=65.5.1",
     "wheel>=0.38.4",
-    "pip>=23.0.1"
+    "pip>=23.0.1",
+    "numpy>=1.24.3"
 ]
 build-backend = "setuptools.build_meta"
 
@@ -14,6 +15,7 @@ requires-python = ">=3.10"
 dependencies = [
     "setuptools>=65.5.1",
     "wheel>=0.38.4",
+    "numpy>=1.24.3",
     "fastapi==0.95.0",
     "uvicorn==0.21.1",
     "pydantic==1.10.7",
@@ -22,7 +24,6 @@ dependencies = [
     "aiofiles==23.1.0",
     "prometheus-client==0.16.0",
     "redis==4.5.4",
-    "numpy==1.24.3",
     "PyYAML==6.0.1",
     "transformers==4.27.4",
     "scikit-learn==1.0.2",
