--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
---no-binary :all:
 setuptools>=65.5.1
 wheel>=0.38.4
 pip>=23.0.1
@@ -14,6 +13,7 @@ redis==4.5.4
 torch==2.0.0+cpu
 torchvision==0.15.1+cpu
 torchaudio==2.0.1
+--pre
 transformers==4.27.4
 numpy==1.24.3
 PyYAML==6.0.1
