--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 setuptools>=65.5.1
 wheel>=0.38.4
 pip>=23.0.1
-distutils-extra>=2.39
 fastapi==0.95.0
 uvicorn==0.21.1
 pydantic==1.10.7
@@ -16,10 +15,10 @@ torchvision==0.17.0+cpu
 torchaudio==2.2.0
 --pre
 transformers==4.27.4
-numpy==1.24.3
+numpy>=1.24.3
 PyYAML==6.0.1
-scikit-learn==1.0.2
-scipy==1.7.3
-pandas==1.5.3
-matplotlib==3.7.1
-seaborn==0.12.2
+scikit-learn>=1.0.2
+scipy>=1.7.3
+pandas>=1.5.3
+matplotlib>=3.7.1
+seaborn>=0.12.2
