--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,9 @@ torch==2.2.0+cpu
 torchvision==0.17.0+cpu
 torchaudio==2.2.0
 --pre
-transformers==4.27.4
+--find-links https://download.pytorch.org/whl/cpu/torch_stable.html
+tokenizers>=0.13.3
+transformers>=4.27.4
 numpy>=1.24.3
 PyYAML==6.0.1
 scikit-learn>=1.0.2
