--- a/vercel.json
+++ b/vercel.json
@@ -3,16 +3,30 @@
     "builds": [
         {
             "src": "api_app.py",
-            "use": "@vercel/python"
+            "use": "@vercel/python",
+            "config": {
+                "maxLambdaSize": "50mb",
+                "runtime": "python3.12"
+            }
         }
     ],
     "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "api_app.py"
+        },
         {
             "src": "/(.*)",
             "dest": "api_app.py"
         }
     ],
     "env": {
-        "PYTHONPATH": "."
+        "PYTHONPATH": ".",
+        "PYTHONUNBUFFERED": "1"
+    },
+    "build": {
+        "env": {
+            "PYTHONUNBUFFERED": "1"
+        }
     }
 } 
